<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Views.ViewDataAboutYou"
    android:background="@drawable/background_cat">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/tvDataAboutYou"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dataAboutYou"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textStyle="bold"/>

    <TableLayout
        android:id="@+id/tableLayoutDataAboutYou"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDataAboutYou"
        android:layout_marginTop="39dp"
        android:gravity="center_horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/trHeight"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvHeight"
                style="@style/textViewDataAboutYou"
                android:layout_width="213dp"
                android:layout_height="match_parent"
                android:text="@string/Height" />

            <TextView
                android:id="@+id/tvHeightValue"
                style="@style/textViewDataAboutYouValue"
                android:text="0" />

        </TableRow>

        <TableRow
            android:id="@+id/trWeight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp">

            <TextView
                android:id="@+id/tvWeight"
                style="@style/textViewDataAboutYou"
                android:text="@string/weight" />

            <TextView
                android:id="@+id/tvWeightValue"
                style="@style/textViewDataAboutYouValue"
                android:text="0" />

        </TableRow>

        <TableRow
            android:id="@+id/trBMI"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp">

            <TextView
                android:id="@+id/tvBMI"
                style="@style/textViewDataAboutYou"
                android:text="@string/BMI" />

            <TextView
                android:id="@+id/tvBMIValue"
                style="@style/textViewDataAboutYouValue"
                android:text="0" />

        </TableRow>
    </TableLayout>

    </RelativeLayout>
</FrameLayout>